--- a/app/views/gm_form2s/index.html.erb
+++ b/app/views/gm_form2s/index.html.erb
@@ -1,7 +1,7 @@
-<main role="main" class="container">
-
+<% content_for :content do %>
+    <main role="main" class="container">
 <h1>Games</h1>
-<%if current_user.admin == true%>
+<% if user_signed_in? && current_user.admin == true%>
   <table class="table table-sm">
     <thead>
       <tr>
@@ -28,6 +28,7 @@
       <% end %>
     </tbody>
   </table>
+
 <%else%>
 <table class="table table-sm">
   <thead>
@@ -49,8 +50,10 @@
   </tbody>
 </table>
 <%end%>
-<p>
-  <%= link_to 'Schedule', schedule_path %> <br>
-  <%= link_to 'Home', home_path %> <br> 
-</p>
+<% if user_signed_in? %>
+        <p>
+          <%= link_to "Apply to be a GM!", new_gm_form1_path(current_user)%>
+        </p>   
+<%end%>
+<%end%>
 </main><!-- /.container -->
