--- a/app/views/pages/pricinginformation.html.erb
+++ b/app/views/pages/pricinginformation.html.erb
@@ -1,17 +1,14 @@
 <% provide(:title, 'Pricing Info')%>
 
+    <% content_for :content do %>
     <main role="main" class="container">
-
       <div class="starter-template">
 
         <h1>Midsouth Con Pricing</h1>
         
-        <p>
-        <%= link_to "Back", eventinfo_path%><br>
-        <%= link_to "Home", home_path %>
-        </p>
+      
               
               
         </div>
-
+    <%end%>
     </main><!-- /.container -->
