--- a/app/views/dealer_forms/_form.html.erb
+++ b/app/views/dealer_forms/_form.html.erb
@@ -1,3 +1,5 @@
+<% content_for :content do %>
+    <main role="main" class="container">
 <%= form_with model: @dealer_form, local: true do |form| %>
      <%= hidden_field_tag :user_id, user_id%>
     <div class="field">
@@ -42,3 +44,5 @@
         <%= form.submit 'Update dealer_form', class: 'btn btn-primary'%>
         </div>
     <% end %>
+    <%end%>
+    </main>
