--- a/app/views/dealer_forms/index.html.erb
+++ b/app/views/dealer_forms/index.html.erb
@@ -1,7 +1,7 @@
-<main role="main" class="container">
-
+<% content_for :content do %>
+    <main role="main" class="container">
 <h1>Dealers</h1>
-<%if current_user.admin == true%>
+<% if user_signed_in? && current_user.admin == true%>
   <table class="table table-sm">
     <thead>
       <tr>
@@ -47,6 +47,7 @@
       <% end %>
     </tbody>
   </table>
+
 <%else%>
   <table class="table table-sm">
     <thead>
@@ -72,7 +73,10 @@
     </tbody>
   </table>
 <%end%>
-<p>
-  <%= link_to 'Home', home_path %> <br> 
-</p>
+<% if user_signed_in? %>
+        <p>
+          <%= link_to "Apply to be a dealer!", new_dealer_form_path(current_user)%>
+        </p>   
+<%end%>
+<%end%>
 </main><!-- /.container -->
