--- a/app/views/gm_form1s/index.html.erb
+++ b/app/views/gm_form1s/index.html.erb
@@ -1,7 +1,7 @@
-<main role="main" class="container">
-
+<% content_for :content do %>
+    <main role="main" class="container">
 <h1>GM Forms</h1>
-<%if current_user.admin == true%>
+<% if user_signed_in? && current_user.admin == true%>
   <table class="table table-sm">
     <thead>
       <tr>
@@ -31,6 +31,7 @@
       <% end %>
     </tbody>
   </table>
+
 <%else%>
   <table class="table table-sm">
     <thead>
@@ -56,5 +57,5 @@
     </tbody>
   </table>
 <%end%>
-
+<%end%>
 </main><!-- /.container -->
