--- a/app/views/gm_form2s/new.html.erb
+++ b/app/views/gm_form2s/new.html.erb
@@ -1,11 +1,9 @@
-<main role="main" class="container">
+<% content_for :content do %>
+    <main role="main" class="container">
 
-    <h1>New GM Form 2</h1>
 
 
     <%= render 'form', user_id: @user.id, gm_form2: @gm_form2%>
 
-<p>
-    <%= link_to 'Home', home_path %>
-</p>
+<%end%>
 </main><!-- /.container -->
