--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<main role="main" class="container">
+<% content_for :content do %>
+    <main role="main" class="container">
 <%if current_user.admin == true%>
 
 <p>
@@ -23,8 +24,9 @@
 <li class="nav-item"><%= link_to "Gaming", gm_form2s_path%></li>
 <li class="nav-item"><%= link_to "Dealers", dealer_forms_path%></li>
 </ul>
-
+<%end%>
 <%else%>
+
 <p>
 
     <b>Name</b> <%= @user.first_name%> <%= @user.last_name%>
@@ -181,7 +183,6 @@
         </p>
         <%end%>
         <%end%>
-</p>
+
+    </main><!-- /.container -->
 <%end%>
-<%= link_to 'Home', home_path%>
-</main><!-- /.container -->
