all we need really now is more static page info

--- a/app/views/pages/hotels.html.erb
+++ b/app/views/pages/hotels.html.erb
@@ -1,17 +1,14 @@
 <% provide(:title, 'Hotels')%>
 
+<% content_for :content do %>
     <main role="main" class="container">
-
       <div class="starter-template">
 
         <h1>Nearby Hotels</h1>
         
-        <p>
-        <%= link_to "Back", eventinfo_path%><br>
-        <%= link_to "Home", home_path %>
-        </p>
+        
               
               
         </div>
-
+    <%end%>
     </main><!-- /.container -->
