--- a/app/views/panelist_forms/index.html.erb
+++ b/app/views/panelist_forms/index.html.erb
@@ -50,7 +50,7 @@
         <th scope="col">Pen Name</th>
         <th scope="col">Title</th>
         <th scope="col">Email</th>
-        <th scope="col">Availability</th>
+        <th scope="col">Time</th>
         <th scope="col"></th>
       </tr>
     </thead>
@@ -60,7 +60,7 @@
           <tr>
               <td><%= panelist_form.pen_name %></td>
               <td><%= panelist_form.title %></td>
-              <td><%= panelist_form.email_address %></td>
+              <td><%= panelist_form.user.email%></td>
               <td><%= panelist_form.availability %></td>
               
           </tr>
