Added Hotel Info

--- a/app/views/pages/hotels.html.erb
+++ b/app/views/pages/hotels.html.erb
@@ -4,10 +4,72 @@
     <main role="main" class="container">
       <div class="starter-template">
 
-        <h1>Nearby Hotels</h1>
+        <h1>Hotel</h1>
+
+        <h2>Hilton Memphis - Venue</h2>
+        <p>
+
+          Once again our convention will be held at the Memphis Hilton in East Memphis at Poplar and I-240<br>
+
+          Room rates are $96.00 a night and are available from Thursday March 14th until Monday March 18th 2019.<br>
+          Group Name: MidSouthCon 2019<br>
+          Group Code: CO0314<br><br>
+
+          This 405-room Memphis, Tennessee hotel was designed by the late Memphis, TN architect Francis Mah, and has undergone an extensive multi-million dollar renovation. The Memphis Hilton offers more comfort, amenities and entertainment choices travelers to area desire. Whether you are on a vacation, with a group or meeting, or on an individual business trip, this hotel has something for everyone, including meeting rooms and public space. Addtionally, the Memphis Hilton features breathtaking views of Memphis in every room because of our floor to ceiling windows.</p>
+          <p>Hotel contact information:<br>
+          Hilton Memphis<br>
+          939 Ridge Lake Boulevard<br>
+          Memphis, Tennessee<br>
+          USA 38120<br>
+          Tel: +1-901-684-6664<br>
+          Fax: +1-901-762-7496<br>
+        <%= link_to 'Hilton Memphis', "http://www.hilton.com/search/hi/us/tn/memphis/0/00000000000/0/0/0/0/20?wt.mc_id=zlada0ww1xx2psh3da4ppc5ppc6multibr7"%>
         
-        
+        </p>
+          <p>Hilton Memphis Hotel Features Include:
+          <ul>
+          <li>Rooks Corner – an American Bistro, serving breakfast, lunch and dinner</li>
+          <li>Lobby Bar – to quench any thirst</li>
+          <li>Beautifully-landscaped outdoor pool and whirlpool</li>
+          <li>Complimentary security monitored parking</li>
+          <li>Valet parking available</li>
+          <li>24-hour fitness center with our new in 2007 <%= link_to "Fitness by Precor®", "http://www.hilton.com/en/hi/promotions/precor/index.jhtml"%></li>
+          <li>24-hour access to our self-service Business Center</li>
+          <li>Hotel gift shop catering to all business and personal needs</li>
+          <li>Gate controlled, security monitored valet parking</li>
+          <li>Complimentary airport shuttle service</li>
+          </ul>
+          </p>
+          
+        <p>Hilton Memphis, TN Hotel Guest Room Features Include:
+            <ul>
+           <li> Flat-Screen Televisions, 32-inch in our Standard rooms and 37-inch in our Deluxe Level rooms</li>
+            <li>405 tastefully decorated guestrooms, including seven suites</li>
+           <li> 66 Deluxe Level rooms located on the top four floors of the hotel with larger 37-inch Flat-Screen Televisions</li>
+            <li>Wireless high-speed Internet access available in all 405 rooms as well as in the meeting spaces and public areas</li>
+            <li>Serenity Bed Collection® featuring the Hilton Suite Dreams Mattress & Box Springs by Serta®</li>
+            <li>Bath amenities featuring the La Source line from Crabtree & Evelyn®</li>
+            <li>Hilton’s signature MP3-capable alarm clock radio</li>
+            <li>USA Today® each weekday morning</li>
+            <li>Two dual-line phones with data ports and voicemail</li>
+            <li>Over 30,000 square feet of meeting space, enough to handle two persons or a reception for 1,600</li>
+            </ul></p>
+
+            <p>Hilton Memphis, Tennessee Hotel Neighborhood:
+            <ul>
+             <li> Less than 10 miles from Memphis International Airport</li>
+             <li> Convenient to many corporate headquarters in the “Poplar Corridor”</li>
+            <li>  Close to shopping at Oak Court Mall</li>
+            <li>  Easy access to all major highways and interstates</li>
+             <li> Easy access to the Pink Palace, Memphis Zoo, Graceland, the FedEx Forum, and Beale Street</li>
+            <li>  Close to many golf courses, including the TPC at Southwind</li></ul>
+             Travel should take you places™.
               
+              </p>
+
+              <p>The Hilton Memphis hotel in Memphis, Tennessee is located in the heart of the East Memphis business district and a short drive from Beale Street, FedEx Forum, Elvis Presley’s Graceland, the Memphis Zoo, Liberty Bowl, Memphis International Airport (MEM), The University of Memphis, The University of Tennessee at Memphis, the Civil Rights Museum, the Loraine Hotel, and downtown Memphis, Tennessee. Memphis is also the home of the Grizzlies and the Redbirds; so come to Memphis, enjoy a game and stay with us at the Hilton Memphis, TN hotel.</p>
+
+
               
         </div>
     <%end%>
