--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,12 @@
           <div class="col-1">
             <ul class="left-nav nav nav-fill flex-column align-self-start">
               <li class="nav-item"><%= link_to "Information", eventinfo_path %></li>
-              <li class="nav-item"><%= link_to "Registration", new_user_registration_path %></li>
+
               <li class="nav-item"><%= link_to "Schedule", schedule_path%></li>
               <li class="nav-item"><%= link_to "Panelists", panelist_forms_path%></li>
               <li class="nav-item"><%= link_to "Gaming", gm_form2s_path%></li>
               <li class="nav-item"><%= link_to "Dealers", dealer_forms_path%></li>
-              <li class="nav-item"><%= link_to "Hotels", hotels_path%></li>
+              <li class="nav-item"><%= link_to "Hotel", hotels_path%></li>
               <li class="nav-item"><%= link_to "Pricing", pricinginformation_path%></li>
               <li class="nav-item"><%= link_to "Home", home_path %></li>
             </ul>
@@ -86,7 +86,7 @@
               <li class="nav-item"><%= link_to "Panelists", panelist_forms_path%></li>
               <li class="nav-item"><%= link_to "Gaming", gm_form2s_path%></li>
               <li class="nav-item"><%= link_to "Dealers", dealer_forms_path%></li>
-              <li class="nav-item"><%= link_to "Hotels", hotels_path%></li>
+              <li class="nav-item"><%= link_to "Hotel", hotels_path%></li>
               <li class="nav-item"><%= link_to "Pricing", pricinginformation_path%></li>
               <li class="nav-item"><%= link_to "Home", home_path %></li>
             </ul>
