Minor hotel formatting

--- a/app/views/pages/hotels.html.erb
+++ b/app/views/pages/hotels.html.erb
@@ -16,18 +16,18 @@
           Group Code: CO0314<br><br>
 
           This 405-room Memphis, Tennessee hotel was designed by the late Memphis, TN architect Francis Mah, and has undergone an extensive multi-million dollar renovation. The Memphis Hilton offers more comfort, amenities and entertainment choices travelers to area desire. Whether you are on a vacation, with a group or meeting, or on an individual business trip, this hotel has something for everyone, including meeting rooms and public space. Addtionally, the Memphis Hilton features breathtaking views of Memphis in every room because of our floor to ceiling windows.</p>
-          <p>Hotel contact information:<br>
-          Hilton Memphis<br>
-          939 Ridge Lake Boulevard<br>
-          Memphis, Tennessee<br>
-          USA 38120<br>
-          Tel: +1-901-684-6664<br>
-          Fax: +1-901-762-7496<br>
-        <%= link_to 'Hilton Memphis', "http://www.hilton.com/search/hi/us/tn/memphis/0/00000000000/0/0/0/0/20?wt.mc_id=zlada0ww1xx2psh3da4ppc5ppc6multibr7"%>
-        
+          <h3>Hotel contact information:</h3>
+          <p><ul><li>Hilton Memphis</li>
+          <li>939 Ridge Lake Boulevard</li>
+         <li> Memphis, Tennessee</li>
+         <li> USA 38120</li>
+         <li> Tel: +1-901-684-6664</li>
+         <li> Fax: +1-901-762-7496</li>
+       <li> <%= link_to 'Hilton Memphis', "http://www.hilton.com/search/hi/us/tn/memphis/0/00000000000/0/0/0/0/20?wt.mc_id=zlada0ww1xx2psh3da4ppc5ppc6multibr7"%></li>
+        </ul>
         </p>
-          <p>Hilton Memphis Hotel Features Include:
-          <ul>
+          <h3>Hilton Memphis Hotel Features Include:</h3>
+          <p><ul>
           <li>Rooks Corner – an American Bistro, serving breakfast, lunch and dinner</li>
           <li>Lobby Bar – to quench any thirst</li>
           <li>Beautifully-landscaped outdoor pool and whirlpool</li>
@@ -41,8 +41,8 @@
           </ul>
           </p>
           
-        <p>Hilton Memphis, TN Hotel Guest Room Features Include:
-            <ul>
+        <h3>Hilton Memphis, TN Hotel Guest Room Features Include:</h3>
+            <p><ul>
            <li> Flat-Screen Televisions, 32-inch in our Standard rooms and 37-inch in our Deluxe Level rooms</li>
             <li>405 tastefully decorated guestrooms, including seven suites</li>
            <li> 66 Deluxe Level rooms located on the top four floors of the hotel with larger 37-inch Flat-Screen Televisions</li>
@@ -55,8 +55,8 @@
             <li>Over 30,000 square feet of meeting space, enough to handle two persons or a reception for 1,600</li>
             </ul></p>
 
-            <p>Hilton Memphis, Tennessee Hotel Neighborhood:
-            <ul>
+            <h3>Hilton Memphis, Tennessee Hotel Neighborhood:</h3>
+            <p><ul>
              <li> Less than 10 miles from Memphis International Airport</li>
              <li> Convenient to many corporate headquarters in the “Poplar Corridor”</li>
             <li>  Close to shopping at Oak Court Mall</li>
