Final minor fixes prior to other merges

--- a/app/views/dealer_forms/index.html.erb
+++ b/app/views/dealer_forms/index.html.erb
@@ -33,7 +33,7 @@
             <td><%= dealer_form.company_website_address %></td>
             <td><%= dealer_form.display_require_AC_power %></td>
             <td><%= dealer_form.number_of_memberships %></td>
-            <td><%= dealer_form.list_names_ages_of_extra_members %></td>
+            <td><%= dealer_form.name_and_age_of_members %></td>
             <td><%= dealer_form.number_of_spaces %></td>
             <%if dealer_form.approved == true%>
             <td>Approved</td>
