--- a/app/views/pages/pricinginformation.html.erb
+++ b/app/views/pages/pricinginformation.html.erb
@@ -6,7 +6,13 @@
 
         <h1>Midsouth Con Pricing</h1>
         
-      
+        <p>
+        <ul>
+        <li>Consuite Giveaway: $10</li>
+        <li>Banquet Tickets: $25</li>
+        <li>Child Pre-Registration (6 - 12 years old): $22.50</li>
+        <li>Adult Pre-Regstration (Ages 13 and Up): $45</li>
+        </ul></p>
               
               
         </div>
