--- a/app/views/dealer_forms/index.html.erb
+++ b/app/views/dealer_forms/index.html.erb
@@ -63,7 +63,7 @@
         <%if dealer_form.approved == true%>
           <tr>
               <td><%= dealer_form.business_name %></td>
-              <td><%= dealer_form.email_address %></td>
+              <td><%= dealer_form.user.email %></td>
               <td><%= dealer_form.type_of_merchandise_or_service %></td>
               <td><%= dealer_form.company_website_address %></td>
               
