--- a/app/views/gm_form2s/index.html.erb
+++ b/app/views/gm_form2s/index.html.erb
@@ -43,7 +43,7 @@
       <%if gm_form2.approved == true%>
         <tr>
             <td><%= gm_form2.user.first_name %> <%= gm_form2.user.last_name %></td>
-            <td><%= gm_form2.games %></td>
+            <td><%= gm_form2.title_of_adventure_or_session %></td>
         </tr>
       <%end%>
     <% end %>
