--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,11 @@
         <td><%= user.email %></td>
         <td><%= user.first_name %></td>
         <td><%= user.admin %></td>
+        <%if user.admin != true%>
         <td><%= link_to "Edit", edit_user_path(user)%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
         </td>
+        <%end%>
         
     </tr>
     <% end %>
