--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="field">
         <%= form.label :state %>
-        <%= form.text_field :state, class: 'form-control' %>
+        <%= form.select :state, options_for_select(["AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"], selected: @user.state), class: 'form-control' %>
     </div>
     <div class="field">
         <%= form.label :zip %>
@@ -44,13 +44,13 @@
     </div>
     <div class="field">
         <%= form.label :membership_type %>
-        <%= form.text_field :membership_type, class: 'form-control' %>
+        <%= form.select :membership_type, options_for_select(["Consuite Giveaway", "Banquet Tickets", "Child Pre-Regitration", "Adult Pre-Registration"], selected: @user.membership_type), class: 'form-control' %>
     </div>
 
     <%if current_user.admin == true%>
     <div class="field">
         <%= form.label :admin %>
-        <%= form.text_field :admin, class: 'form-control' %>
+        <%= form.select :admin, options_for_select(["false", "true"], selected: @user.admin),class: 'form-control' %>
     </div>
 
     <%end%>
