--- a/app/views/pages/comicsgoh.html.erb
+++ b/app/views/pages/comicsgoh.html.erb
@@ -4,9 +4,12 @@
     <%= image_tag("Tom-Nguyen-240x300.jpg", alt: "Tom Nguyen - Comics Guest of Honor") %>
     <h3>About</h3>
     <p>
-    Tom Nguyen is a professional comic book artist and illustrator. He began his career in 1997 working for DC Comics on the first issue of Major Bummer. Later he worked on titles as Superman: The Man of Steel, Action Comics, JLA, Batman and many more.
+    Tom Nguyen is a Vietnamese-American visual artist who began his professional career freelancing for comic book publishers such as DC Comics and Marvel Comics from the age of 19.  Building his name as an inker, he has worked on major titles such as Batman, Green Lantern, JLA, and Superman: The Man of Steel among others.  
     <br><br>
-    Most recently he has worked on titles as Batwoman, Justice League of America and Catwoman; all part of the New 52 series.
+    Tom has since quickly branched out into other areas professionally, such as pencilling, painting, and authoring two instructional books on comic book art.  Moving into television, Tom has been doing background and/or on-screen art  for television shows such as CBS’s “Big Brother,” MTV’s “Are You the One,” and the recent relaunch of Nickelodeon’s “Double Dare.”  In addition, Tom has added photography to his resume in recent years with his commercial work for catalogs and portraits of glamour and fitness models.
+    Along with writer/artist Keith Champagne, Tom is the co-creator of the Kickstarter success and original graphic novel The Switch, published by Dynamite Entertainment.
+    <br><br>
+    In his spare time, Tom teaches art via his online workshop Art Samurai, runs photography lighting workshops, lifts weights, and plans his next areas of travel.
     </p>
 
 
